new edits for my resume

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
           <li><a href="#">Home</a></li>
           <li><a href="resume2.html">Experience</a></li>
           <li><a href="#">Photos</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contacts.html">Contact</a></li>
         </ul>
     </div>
 
     <header>
       <img src="media/DON_0111.jpg" alt="Drawing of Don Tamayo" class="profile-image">
       <p class="tag name">Hello, I'm Don.</p>
-      <p class="tag location">My home is Jersey City, New Jersey.</p>
+      <p class="tag location">"I can do all things through Christ who gives me strength"</p>
     </header>
 
     <main class="flex">
@@ -30,7 +30,7 @@
         <p>I’m an aspiring Web Developer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I like to  cook  Filipino dishes and trying new recipes. A  life-long learner who's always interested in expanding my skills.</p>
         <p>On the same manner im happilly married to my wife Monica who never fails to support me, <br/>
-        <a href="#top"><img src="media/2.jpg" width="400" height="400" alt="Drawing of Don Tamayo" class="profile-image" width >i love here with all my heart</a></p>
+        <a href="#top"><img src="media/2.jpg" width="320" height="350" alt="Drawing of Don Tamayo" class="profile-image" width ><br>i love here with all my heart</a></p>
         <ul>
           <li>To learn more, <a href="resume2.html">view my resume.</a></li>
         </ul>
@@ -46,16 +46,50 @@
           <li>React Native</li>
           <li>Full Stack Web Developer</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div>
+        <p>I’d like to work for a  Company firm helping clients create an impressive online presence.</p>
+        <p>and to expand my skills and discover more avenues to be  a succesful developer</p>
+        <p><q><em>It does not matter how slowly you go as long as you do not stop believing.</em></q></p>
+        <h4>Listen to my Playlist</h4>
+        <iframe src="https://open.spotify.com/embed/user/sue8317/playlist/5SPAJBLZFP1R17GkGt1LQa" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+      </main>
+      <main class="flex">
+      <div class="container" >
+  <h2>More About Me</h2>
 
-    </main>
+   <article>
+  <p>
+    I came from a very humble beginning, I love to go to school but on many occasions I cant afford to go to school,
+    not because I’m lazy but because I don’t have a pair of shoes to get in the class, no food for lunch, no money to ride for a tricycle, not
+    enough books to read, no internets nor television.
+    Yet the only weapon I have is God, I believe in Him that He will provide all means to be called one of the “successful”.
+    I strive hard, no rides? I walk 4 miles back and forth from my school to house,
+    no food? No worries, I bargain my homework with my classmates and in return getting free lunch from them, and I’m telling you,
+    I even manage to sell fruits and vegetables inside my school. I gain profit, I develop my skills, some say its embarrassing
+    but for me its my only way to overcome poverty. I’m not ashamed, I am proud of it.
+    Those struggles helped me to become stronger and to have more faith in God.
+    I finished my college degree, two major within 4 yrs of studying in my country, how did I do
+    it? I worked as a working student, librarian during the day and student guard during at night.
+    It was tough first year of my college life. Yet I endure, because I believed! During my college life,
+     I manage to get scholarship and sponsorship to finished
+    my studies. God provided me good people to be of great help especially financially.
+    And of course I finished Bachelor of Theology, and some major on Secondary Education.
+     I love to learn and I will always keep improving myself. Now, I’m so blessed
+    that I get into Galvanize as a Web Developer. Everything is new with me hence I've never  done any programming before,
+     but I’m so glad that I’m here, constantly growing my skills, expanding what I have and to be a better person. Networking and socializing
+    with bright minds learning from them and get inspirations.
+    I'm looking forward to be successful web developer, working with companies help them grow,
+    and develop creative apps that can be benefited by everyone. "Never stop learning, Learning never exhausts the mind ".
+  </p>
+</article>
+</div>
+  </main>
     <footer>
       <ul>
         <li><a href="https://twitter.com/twitter?lang=en" target="_blank" class="social twitter">Twitter</a></li>
         <li><a href="https://www.linkedin.com/in/don-tamayo-2b0204132/" target="_blank" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/webbydon29" class="social github">Github</a></li>
       </ul>
+
       <p class="copyright">Copyright 2017, Don Tamayo LLC</p>
     </footer>
   </body>
